tests/tooling/fixtures/native/recovery/positive/message_send_nil_receiver_short_circuit.objc3
// Positive fixture: explicit reassignment to nil enables compile-time elision at the send-site.
module MessageSendNilReceiverShortCircuit;

fn main() {
  let receiver = 1;
  receiver = nil;
  let sent = [receiver sum: 3 with: 4];
  return sent + 5;
}
