tests/tooling/fixtures/native/recovery/negative/negative_hex_literal_parser_missing_rhs.objc3
// Expected diagnostic code(s): O3P103.
module NegativeHexLiteralParserMissingRhs;

let value = 0x2 + ;

fn main() -> i32 {
  return 0;
}
